--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -57,6 +57,7 @@
 	    <!--	    <div id="phase-buttons"></div>  -->
 	    <div id="game-controls">
 		    <button id="reset-button">reset game</button>
+		    <button id="new-game-button">new game</button>
 	    </div>
 	    <div id="final-scores" style="display: none; margin-top: 20px;"></div>
 
