add animations for opponents cards and placing

--- a/website/templates/game_settings.html
+++ b/website/templates/game_settings.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/graph_builder.css') }}">
 </head>
 <body>
-<h1>🌓 Game Settings</h1>
+<h1>Game Settings</h1>
 
 <div style="max-width: 600px; margin: auto;">
   <h3>Choose a Board</h3>
