--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -39,6 +39,11 @@
         </div>
 
 
+           <div id="opponent-hand" class="hand">
+             <div class="card-back"></div>
+             <div class="card-back"></div>
+             <div class="card-back"></div>
+           </div>
 
 
 	   <div id="game-board" class="board hide-labels">
@@ -46,10 +51,6 @@
               <canvas id="connections-canvas"></canvas> 
           </div>
  
-	    <div id="debug-hands" style="margin-top: 1em;">
-              <div><strong>player 1 hand (debug):</strong> <span id="player1-hand-debug"></span></div>
-              <div><strong>player 2 hand (debug):</strong> <span id="player2-hand-debug"></span></div>
-	    </div>
             
 	    <div id="hand"></div>
 
