--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -20,6 +20,9 @@
 		player 2: <span id="player2-points">0</span> points
 	    </div>
 	</div>
+
+	<div id="deckStatus" style="margin-top: 10px; font-weight: bold;"></div>
+
 	
 
 	<div id="debug-panel" style="display:none; position:fixed; top:20px; left:20px; background:#eee; padding:10px; border:1px solid #aaa; z-index:999;">
