add github page to website

--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -3,11 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Moon Game</title>
-  <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Moon Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -33,7 +28,9 @@
       text-decoration: underline;
     }
   </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
   <h1>🌙 Moon Game</h1>
 
@@ -58,9 +55,17 @@
     </div>
   </details>
   <p style="margin-top:20px;">
-  🌙 The original <a href="https://www.google.com/doodle/rise-of-the-half-moon" target="_blank">Try Google's original Moon Game Doodle here!</a>
+  🌙 <a href="https://www.google.com/doodle/rise-of-the-half-moon" target="_blank">Try Google's original Moon Game Doodle here!</a>
   </p>
 </div>
+
+<div style="margin-top:40px; font-size: 14px;">
+  <a href="https://github.com/cindyli-xkcd/moon-game" target="_blank">
+    <i class="fab fa-github"></i> View on GitHub
+  </a>
+</div>
+
+
 
 </body>
 </html>
